Bug 491806 - Kirigami.Icon doesn't accept the value of Qt.resolvedUrl() as source anymore, breaking many icons
Summary: Kirigami.Icon doesn't accept the value of Qt.resolvedUrl() as source anymore,...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kirigami
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: Master
Platform: openSUSE Linux
: HI normal
Target Milestone: 1.0
Assignee: kdelibs bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2024-08-17 06:00 UTC by Robby Engelmann
Modified: 2024-08-24 12:07 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot exemplifying the issue (29.11 KB, image/png)
2024-08-20 18:03 UTC, Robby Engelmann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Engelmann 2024-08-17 06:00:51 UTC
only the typical placeholder icon is shown. Might it be due to new icon scaling mechanism?

Operating System: openSUSE Tumbleweed 20240816
KDE Plasma Version: 6.1.80
KDE Frameworks Version: 6.6.0
Qt Version: 6.7.2
Kernel Version: 6.10.4-1-default (64-bit)
Graphics Platform: Wayland
Processors: 20 × 13th Gen Intel® Core™ i7-13700H
Memory: 62.5 GiB of RAM
Graphics Processor: Mesa Intel® Graphics
Manufacturer: TUXEDO
Product Name: TUXEDO InfinityBook Pro Gen8 (MK1)
Comment 1 Nate Graham 2024-08-20 16:32:24 UTC
Please attach a screenshot that shows the issue.

Also, does it happen in a new clean user account with no customizations?
Comment 2 Robby Engelmann 2024-08-20 18:03:31 UTC
Created attachment 172783 [details]
screenshot exemplifying the issue
Comment 3 Robby Engelmann 2024-08-20 20:39:00 UTC
Tested, and yes here it is also happening with a new user,
adding Fokus or Wunderground Weather --> only placeholder symbol is shown.
Comment 4 Nate Graham 2024-08-20 20:47:29 UTC
Thanks. Focus and Wunderground weather are both 3rd-party widgets, so I'll have to see what icons they're using. Are the only two widgets affected, or are there any others too?
Comment 5 Nate Graham 2024-08-20 20:54:15 UTC
In the case of Wunderground Weather, the code to set the icon is wrong, probably because `iconCode` isn't getting set properly. Fokus has a similar issue; it can't find `customIconSource`.

Thus, these widgets are broken and need fixes from their authors.
Comment 6 Robby Engelmann 2024-08-20 21:00:11 UTC
It is also with Chat-AI and the Vivid-SDDM-6 theme (here shutdown etc icons are only placeholders).
Using the Vivid-Splash-6 lead to kwayland crash and blocked the login totally (went back to the login screen).

It first appeared before roughly a week or so.

Hope that helps.
Comment 7 Nate Graham 2024-08-20 21:05:08 UTC
Aha! It's f673694e6f90efa0179a6f8322d4c44d544ff591 in Kirigami. Reverting that fixes it for Focus and Wunderground Weather, and I assume for all the other cases as well. The common thing those two widgets do is `source: Qt.resolvedUrl([some local path])` in Kirigami.Icon. Perhaps that broke.
Comment 8 Bug Janitor Service 2024-08-22 20:27:50 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kirigami/-/merge_requests/1610
Comment 9 Nicolas Fella 2024-08-22 22:13:08 UTC
Git commit 5cfb3bb97213e7e5b4234143ceb5be4865be37a9 by Nicolas Fella.
Committed on 22/08/2024 at 20:27.
Pushed by cullmann into branch 'master'.

[icon] Only reload icon from theme if the theme has that icon

Otherwise we try to reload icons from absolute paths or non-standard search paths, which won't work
Related: bug 491854, bug 491848

M  +1    -1    src/primitives/icon.cpp

https://invent.kde.org/frameworks/kirigami/-/commit/5cfb3bb97213e7e5b4234143ceb5be4865be37a9
Comment 10 Robby Engelmann 2024-08-24 12:07:50 UTC
fixed here using yesterdays master snapshot. Great!