[icon] Only reload icon from theme if the theme has that icon

Otherwise we try to reload icons from absolute paths or non-standard search paths, which won't work

BUG: 491806

BUG: 491854

BUG: 491848